# dbc-codegen

./: .editorconfig  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  shell.nix
.github/workflows/: ci.yml
dbc-codegen-cli/: Cargo.toml
dbc-codegen-cli/src/: main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: keywords.rs  lib.rs  main.rs  pad.rs
src/includes/: arbitrary_helpers.rs  errors.rs  mod.rs
testing/: README.adoc  generate_example_code.sh  generate_example_code_bitvec.sh  setup_virtual_can.sh
testing/can-embedded/: Cargo.toml
testing/can-embedded/src/: messages.rs
testing/can-messages/: Cargo.toml  build.rs
testing/can-messages-bitvec/: Cargo.toml
testing/can-messages-bitvec/src/: lib.rs  messages.rs
testing/can-messages/src/: lib.rs  messages.rs
testing/can-messages/tests/: all.rs
testing/cantools-messages/: Cargo.toml  build.rs  example.c  example.h  generate_example_code.sh  wrapper.h
testing/cantools-messages/src/: lib.rs
testing/dbc-examples/: example.dbc  example.kcd
testing/node-socketcan/: main.js  package-lock.json  package.json
testing/rust-integration/: Cargo.toml
testing/rust-integration/src/: main.rs
testing/rust-integration/tests/: compare_to_socketcan.rs
