[package]
name = "dbc-codegen"
version = "0.2.0"
authors = [
    "Pascal Hertleif <pascal@technocreatives.com>",
    "Marcel Buesing <buesing.marcel@googlemail.com>",
    "Andres Vahter <andres@vahter.me>",
]
edition = "2021"
description = "CAN DBC code-gen for embedded Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/technocreatives/dbc-codegen"
homepage = "https://github.com/technocreatives/dbc-codegen"

[features]
std = []

[dependencies]
can-dbc = "5.0.0"
anyhow = "1.0.68"
heck = "0.4.0"

[workspace]
members = [
    ".",
    "dbc-codegen-cli",
    "testing/rust-integration",
    "testing/can-embedded",
    "testing/can-messages",
    "testing/cantools-messages",
]

# Indicates features that docs.rs should enable when building documentation.
[package.metadata.docs.rs]
features = ["std"]
