[package]
name = "dbc-codegen-cli"
version = "0.3.0"
authors = [
    "Pascal Hertleif <pascal@technocreatives.com>",
    "Marcel Buesing <buesing.marcel@googlemail.com>",
    "Andres Vahter <andres@vahter.me>",
]
edition = "2021"
description = "CLI for CAN DBC codegen"
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/technocreatives/dbc-codegen"
homepage = "https://github.com/technocreatives/dbc-codegen"

[dependencies]
heck = "0.4.0"
clap = { version = "4.1", features = ["derive"] }
exitcode = "1.1.2"
dbc-codegen = { version = "0.3", path = ".." }

[[bin]]
name = "dbc-codegen"
path = "src/main.rs"
