[package]
name = "can-messages"
version = "0.1.0"
authors = ["Pascal Hertleif <pascal@technocreatives.com>"]
edition = "2021"

[dependencies]
bitvec = { version = "1.0", default-features = false }
arbitrary = { version = "1.0", optional = true }
embedded-can = "0.4.1"
defmt = "0.3.8"

[build-dependencies]
anyhow = "1.0"
dbc-codegen = { path = "../../" }

[features]
default = ["arb", "std"]
arb = ["arbitrary"]
std = []
